workaround for bug #6; second organization input is appearing 1px too low

--- a/static_media/css/zosia.css
+++ b/static_media/css/zosia.css
@@ -171,3 +171,12 @@ label.for_hidden span {
 }
 #login_form input {}
 
+/**
+ * fixes
+ */
+
+#register_auth li, #register_personal li
+{
+	height: 2em;
+}
+
